--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -63,7 +63,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_license_of_the_app">Montri permesilon de la apo</string>
     <string name="language">Lingvo</string>
     <string name="open_with">Malfermi per</string>
-    <string name="sort">Ordigi laŭ</string>
+    <string name="sort_by">Ordigi laŭ</string>
     <string name="date">Dato</string>
     <string name="deleteme____1">Dosiernomo</string>
     <string name="size">Grandeco</string>
