--- a/app/src/main/res/values-fil/strings.xml
+++ b/app/src/main/res/values-fil/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Wika</string>
     <string name="error_need_storage_permission_to_save_documents">Kinakailangan ang permiso sa Storage para maka-save ng mga dokumento</string>
     <string name="open_with">Buksan gamit ang</string>
-    <string name="sort">Ayusin ayon sa</string>
+    <string name="sort_by">Ayusin ayon sa</string>
     <string name="date">Petsa</string>
     <string name="deleteme____1">Pangalan</string>
     <string name="size">Laki</string>
