--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Limbă</string>
     <string name="error_need_storage_permission_to_save_documents">Aveți nevoie de permisiune pentru stocare pentru a salva documente</string>
     <string name="open_with">Deschideți cu</string>
-    <string name="sort">Sortează după</string>
+    <string name="sort_by">Sortează după</string>
     <string name="date">Data</string>
     <string name="deleteme____1">Nume</string>
     <string name="size">Dimensiune</string>
@@ -358,7 +358,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Adaugă context</string>
     <string name="add_project">Adaugă proiect</string>
     <string name="archive_completed_tasks">Arhivare sarcini finalizate</string>
-    <string name="sort_alphabetically">Sortează alfabetic</string>
+
     <string name="create_new_file_or_folder">Creaţi un nou fişier sau dosar</string>
     <string name="choose_format">Alegeți formatul</string>
     <string name="selected">Selectate</string>
