--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Nyelv</string>
     <string name="error_need_storage_permission_to_save_documents">A dokumentumok mentéséhez szükség van a tárhelyhozzáférésre</string>
     <string name="open_with">Megnyitás ezzel</string>
-    <string name="sort">Rendezés</string>
+    <string name="sort_by">Rendezés</string>
     <string name="date">Dátum</string>
     <string name="deleteme____1">Név</string>
     <string name="size">Méret</string>
@@ -352,7 +352,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Kontextus hozzáadása</string>
     <string name="add_project">Projekt hozzáadása</string>
     <string name="archive_completed_tasks">Befejezett feladatok archiválása</string>
-    <string name="sort_alphabetically">Ábécé szerinti sorbarendezés</string>
+
     <string name="create_new_file_or_folder">Új fájl vagy mappa létrehozása</string>
     <string name="choose_format">Formátum kiválasztása</string>
     <string name="selected">Kiválasztott</string>
