--- a/app/src/main/res/values-kmr/strings.xml
+++ b/app/src/main/res/values-kmr/strings.xml
@@ -31,7 +31,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select">Hilbijartin</string>
     <string name="name">Nav</string>
     <string name="language">Ziman</string>
-    <string name="sort">Rêz bike</string>
+    <string name="sort_by">Rêz bike</string>
     <string name="date">Dem</string>
     <string name="deleteme____1">Nav</string>
     <string name="size">Mezinayî</string>
