--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Język</string>
     <string name="error_need_storage_permission_to_save_documents">Potrzebuję zezwolenia do pamięci, żeby zapisywać dokumenty</string>
     <string name="open_with">Otwórz za pomocą</string>
-    <string name="sort">Sortuj</string>
+    <string name="sort_by">Sortuj</string>
     <string name="date">Sortuj według daty</string>
     <string name="deleteme____1">Sortuj według nazwy</string>
     <string name="size">Rozmiar</string>
@@ -358,7 +358,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Dodaj kontekst</string>
     <string name="add_project">Dodaj projekt</string>
     <string name="archive_completed_tasks">Archiwizuj wykonane zadania</string>
-    <string name="sort_alphabetically">Sortuj</string>
+
     <string name="create_new_file_or_folder">Utwórz nowy plik lub folder</string>
     <string name="choose_format">Wybierz format</string>
     <string name="selected">Wybrane</string>
