--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Idioma</string>
     <string name="error_need_storage_permission_to_save_documents">Para salvar documentos é necessário ter permissão de acesso ao armazenamento</string>
     <string name="open_with">Abrir com</string>
-    <string name="sort">Ordenar</string>
+    <string name="sort_by">Ordenar</string>
     <string name="date">Ordenar por Data</string>
     <string name="deleteme____1">Ordenar por Nome</string>
     <string name="size">Tamanho</string>
@@ -358,7 +358,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Adicionar contexto</string>
     <string name="add_project">Adicionar projeto</string>
     <string name="archive_completed_tasks">Arquivar tarefas concluídas</string>
-    <string name="sort_alphabetically">Ordenar alfabeticamente</string>
+
     <string name="create_new_file_or_folder">Criar um novo arquivo ou pasta</string>
     <string name="choose_format">Escolha o formato</string>
     <string name="selected">Selecionado</string>
