--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Γλώσσα</string>
     <string name="error_need_storage_permission_to_save_documents">Χρειάζεστε άδεια αποθήκευσης για να αποθηκεύσετε έγγραφα</string>
     <string name="open_with">Άνοιγμα με</string>
-    <string name="sort">Ταξινόμηση κατά</string>
+    <string name="sort_by">Ταξινόμηση κατά</string>
     <string name="date">Ημερομηνία</string>
     <string name="deleteme____1">Όνομα</string>
     <string name="size">Μέγεθος</string>
@@ -360,7 +360,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Προσθήκη συγκειμένου</string>
     <string name="add_project">Προσθήκη έργου</string>
     <string name="archive_completed_tasks">Αρχειοθέτηση ολοκληρωμένων εργασιών</string>
-    <string name="sort_alphabetically">Ταξινόμηση αλφαβητικά</string>
     <string name="create_new_file_or_folder">Δημιουργία νέου αρχείου ή φακέλου</string>
     <string name="choose_format">Επιλογή μορφής</string>
     <string name="selected">Επιλεγμένο</string>
