[ci skip] Update translations (Sardinian)

--- a/app/src/main/res/values-sc/strings.xml
+++ b/app/src/main/res/values-sc/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Limba</string>
     <string name="error_need_storage_permission_to_save_documents">Tenet bisòngiu de su permissu pro s\'atzessu a sa memòria pro sarvare documentos</string>
     <string name="open_with">Aberi cun</string>
-    <string name="sort">Òrdina pro</string>
+    <string name="sort_by">Òrdina pro</string>
     <string name="date">Data</string>
     <string name="deleteme____1">Nùmene</string>
     <string name="size">Mannària</string>
@@ -358,7 +358,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Annanghe cuntestu</string>
     <string name="add_project">Annanghe unu progetu</string>
     <string name="archive_completed_tasks">Archìvia sas fainas acabadas</string>
-    <string name="sort_alphabetically">Òrdina alfabeticamente</string>
     <string name="create_new_file_or_folder">Crea unu documentu o una cartella noa</string>
     <string name="choose_format">Issèbera su formadu</string>
     <string name="selected">Ischertados</string>
