--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -81,6 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Dil</string>
     <string name="error_need_storage_permission_to_save_documents">Belgeleri kaydetmek için depolama izni gerekiyor</string>
     <string name="open_with">Şununla aç</string>
+    <string name="sort_by">Sırala</string>
     <string name="date">Tarihe göre sırala</string>
     <string name="deleteme____1">Ada göre sırala</string>
     <string name="size">Boyuta göre sırala</string>
