--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -81,6 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Мова</string>
     <string name="error_need_storage_permission_to_save_documents">Потрібен дозвіл на запис для збереження документів</string>
     <string name="open_with">Відкрити в</string>
+    <string name="sort_by">Сортування</string>
     <string name="date">Дата</string>
     <string name="deleteme____1">Ім\'я</string>
     <string name="size">Розмір</string>
