--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -81,6 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">语言</string>
     <string name="error_need_storage_permission_to_save_documents">需要存储权限才能保存文档</string>
     <string name="open_with">打开方式</string>
+    <string name="sort_by">排序方式</string>
     <string name="date">日期</string>
     <string name="deleteme____1">名称</string>
     <string name="size">文件大小</string>
